push other json

--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
             <br>
             <br>
             <input type="button" class="btn btn-primary btn-lg px-4" value="Descargar JSON" onclick="getJson();">
+            <br>
+            <br>
+            <input type="button" class="btn btn-primary btn-lg px-4" value="Descargar JSON 2" onclick="getJson2();">
             
         </div>
         <div class="product-device shadow-sm d-none d-md-block"></div>
